--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+html {
+  overflow-x: hidden;
+}
 body {
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 15px;
   }
