--- a/src/components/menus/menu_styles.scss
+++ b/src/components/menus/menu_styles.scss
@@ -1,3 +1,11 @@
+//defining screen breakpoints for responsivness
+$x-small: 0px;
+$small: 640px;
+$medium: 768px;
+$large: 1024px;
+$x-large: 1280px;
+$xx-large: 1536px;
+
 .appbar-container {
   display: grid;
   grid-template-columns: 15% 70% 15%;
@@ -17,7 +25,6 @@
               border-bottom: 0;
               li.ant-menu-item {
                 span.ant-menu-title-content {
-                  // border: 1px solid red;
                   color: #667085;
                   font-family: Lexend;
                   font-size: 1.125rem;
@@ -56,6 +63,31 @@
                   }
                 }
               }
+              @media screen and (min-width: 800px) and (max-width: 900px) {
+                li.ant-menu-item {
+                  padding-left: 8px;
+                  padding-right: 8px;
+
+                  span.ant-menu-title-content {
+                    font-size: 1rem;
+                  }
+                }
+                .ant-menu-submenu {
+                  padding-left: 8px;
+                  padding-right: 8px;
+                  .ant-menu-submenu-title {
+                    display: inline-flex;
+                    gap: 0.05rem;
+
+                    img {
+                      order: 2;
+                    }
+                    .ant-menu-title-content {
+                      font-size: 1rem;
+                    }
+                  }
+                }
+              }
             }
           }
         }
@@ -63,5 +95,70 @@
     }
   }
   .appbar-signin-btn {
+  }
+}
+
+.mobile-appbar-container {
+  // added all these classNames to increase specifity
+  .ant-menu {
+    &.ant-menu-root {
+      background: 0;
+      border-bottom: 0;
+      li.ant-menu-item {
+        span.ant-menu-title-content {
+          color: gray;
+          font-family: "Lexend";
+          font-size: 1.125rem;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+      .ant-menu-submenu {
+        .ant-menu-submenu-title {
+          display: inline-flex;
+          gap: 0.75rem;
+          .ant-menu-title-content {
+            color: #667085;
+            font-family: "Lexend";
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+          }
+        }
+      }
+    }
+  }
+  .appbar-signin-btn {
+  }
+}
+.hamburger-btn {
+  background: rgba(128, 128, 128, 0.8);
+  height: fit-content;
+  padding: 0.5rem;
+  padding-bottom: 0;
+
+  img {
+    transform: scale(1.5);
+  }
+}
+
+.main-lateral-drawer {
+  .ant-drawer-wrapper-body {
+    .ant-drawer-header {
+      background: rgba(26, 137, 236, 0.07) !important;
+      .ant-drawer-header-title {
+        .ant-drawer-title {
+          button {
+            background: 0;
+            border: 0;
+            transform: scale(1.25);
+            box-shadow: none;
+            padding: 0;
+          }
+        }
+      }
+    }
   }
 }
