--- a/src/components/nav/nav_styles.scss
+++ b/src/components/nav/nav_styles.scss
@@ -1,3 +1,10 @@
 .withnav-container {
   background: #edf1f6a1;
 }
+
+.withnav-container {
+  .withnav-mobile-nav {
+    padding-left: 1.2rem;
+    padding-top: 1.2rem;
+  }
+}
